change(app,front): change users page permission to settings.users
